# bicicletas-sevilla-alexa-skill

./: .gitignore  .travis.yml  Pipfile  README.md  interaction_model.json  pyproject.toml
initial_data/: Seville.json  load_data.py
lambda/connectors/: db_functions.py
lambda/connectors/bikes_api/: __init__.py  api_client.py  configuration.py  rest.py
lambda/connectors/bikes_api/api/: __init__.py  contracts_api.py  stations_api.py
lambda/connectors/bikes_api/models/: __init__.py  error.py  station.py
scripts/: deploy_code.bat
skill/: main.py
skill/connectors/: bikes_connector.py  db_object.py  db_utils.py
skill/connectors/bikes_api/: __init__.py  api_client.py  configuration.py
skill/connectors/bikes_api/api/: __init__.py  contracts_api.py  stations_api.py
skill/connectors/bikes_api/models/: __init__.py  contract.py  station.py  station_position.py
skill/handlers/: CancelOrStopIntentHandler.py  CatchAllExceptionHandler.py  FallbackIntentHandler.py  HelpIntentHandler.py  LaunchRequestHandler.py  LoggingRequestInterceptor.py  RepeatIntentHandler.py  SessionEndedRequestHandler.py  StartOverIntentHandler.py  StationBikesIntentHandler.py  StationSlotsIntentHandler.py  StationStatusIntentHandler.py  UpdateInterceptor.py
skill/i18n/: es_ES.py
skill/utils/: STATES.py  locale_functions.py  logger.py  misc_functions.py
test/: bikes_test.py  configuration.py.enc  test_contract.py  test_contracts_api.py  test_error.py  test_station.py  test_station_position.py  test_stations_api.py
