[tool.poetry]
name = "bicicletas-sevilla-skill"
version = "0.1.0"
description = "Alexa Skill for asking JCDecaux API about stations status"
authors = ["Ale Sanchez <alesanchezmedina@gmail.com>"]
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
repository = "https://github.com/alesanmed/bicicletas-sevilla-alexa-skill"
keywords = ['alexa-skill', 'jcdecaux', 'sevici']

[tool.poetry.dependencies]
python = "^3.6"
ask-sdk = "^1.5"
pymongo = "^3.7"
certifi = "^2018.11"
six = "^1.12"
python-dateutil = "^2.7"
urllib3 = "^1.24"

[tool.poetry.dev-dependencies]
pylint = "^2.2"
autopep8 = "^1.4"
coverage = "^4.5"
nose = "^1.3"
pluggy = "^0.8.0"
py = "^1.7"
randomize = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
